Test embed of test video, seems fine

--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         </header>
 
         <main>
+
+            <video controls width="320">
+                <source src="video.mp4" type="video/mp4">
+                Sorry, your browser doesn't support embedded videos.
+            </video>
+
         </main>
 
     </div>
