Add hidden controls including play/pause button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
                 <figcaption>Description of video</figcaption>
             </figure>
 
+            <ul id="video-controls" class="controls">
+                <li><button id="playpause" type="button">Play/Pause</button></li>
+            </ul>
+
         </main>
 
     </div>
