--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Joe's Lyfta take-home challenge</title>
     <script src="script.js" defer></script>
     <link href="style.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body>
     <div id="everything">
@@ -17,17 +18,23 @@
         <main>
 
             <!-- https://developer.mozilla.org/en-US/docs/Web/Guide/Audio_and_video_delivery/cross_browser_video_player -->
-            <figure id="videoContainer">
-                <video id="video" controls poster="poster.png" width="320">
-                    <source src="video.mp4" type="video/mp4">
-                    Sorry, your browser doesn't support embedded videos.
-                </video>
+            <figure id="video-outer-container">
+                <div id="video-inner-container">
+                    <video
+                        id="video"
+                        controls
+                        poster="poster.png"
+                        width="320"
+                    >
+                        <source src="video.mp4" type="video/mp4">
+                        Sorry, your browser doesn't support embedded videos.
+                    </video>
+                    <ul id="video-controls" class="controls">
+                        <li><button id="playpause" type="button"><span class="material-icons">play_arrow</span></button></li>
+                    </ul>
+                </div>
                 <figcaption>Description of video</figcaption>
             </figure>
-
-            <ul id="video-controls" class="controls">
-                <li><button id="playpause" type="button">Play/Pause</button></li>
-            </ul>
 
         </main>
 
