Separate function to play/pause; tweaked styles
Relates #1

Relates #30

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         Sorry, your browser doesn't support embedded videos.
                     </video>
                     <ul id="video-controls" class="controls">
-                        <li><button id="playpause" type="button"><span class="material-icons">play_arrow</span></button></li>
+                        <li><button id="playpause" type="button"><span class="control-icon material-icons">play_arrow</span></button></li>
                     </ul>
                 </div>
                 <figcaption>Description of video</figcaption>
